Bug 13475 - Memory leak onto long-term contexts during failed ldb operations
Summary: Memory leak onto long-term contexts during failed ldb operations
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 13483
Blocks:
  Show dependency treegraph
 
Reported: 2018-06-15 17:42 UTC by Andrew Bartlett
Modified: 2021-08-23 02:21 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2018-06-15 17:42:39 UTC
Patches by Andrej Gessel fix several mem leaks in ldb_index ldb_search ldb_tdb
Comment 1 Andrew Bartlett 2018-07-08 19:19:28 UTC
Fixed in master by 3ca1c09f686fbfa9257cd95710dba4a98c3eeb8f for Samba 4.9 and by 7ccd1eb5393f76642a96db0037d9f4b3bb10709a in v4-8-test for ldb 1.3.4 and Samba 4.8.3.

Possible to backport to 4.7 series